--- a/setup.py.in
+++ b/setup.py.in
@@ -25,19 +25,21 @@ setup(
     name = "opendiamond",
     version = "@VERSION@",
     packages = [
+	'dataretriever',
 	'opendiamond',
 	'opendiamond.filter',
 	'opendiamond.server',
     ],
     scripts = [
 	'@srcdir@/tools/cookiecutter',
+	'@srcdir@/tools/dataretriever',
 	'@srcdir@/tools/diamondd',
 	'@srcdir@/tools/diamond-bundle-python',
     ],
     package_dir = { '': '@srcdir@' },
     author = "OpenDiamond project, Carnegie Mellon University",
     author_email = "diamond@cs.cmu.edu",
-    description = "OpenDiamond Python library",
+    description = "OpenDiamond",
     license = "Eclipse Public License, Version 1.0",
     keywords = "opendiamond non-indexed search",
     url = "http://diamond.cs.cmu.edu/",
