--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = libfilter newscope scopeserver tests volcano
+SUBDIRS = libfilter newscope tests volcano
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -34,6 +34,21 @@ EXTRA_DIST = CREDITS LICENSE INSTALL \
 	opendiamond/server/search.py \
 	opendiamond/server/sessionvars.py \
 	opendiamond/server/statistics.py \
+	scopeserver_flickr/__init__.py \
+	scopeserver_flickr/forms.py \
+	scopeserver_flickr/views.py \
+	scopeserver_flickr/templates/simple_form.html \
+	scopeserver_gatekeeper/__init__.py \
+	scopeserver_gatekeeper/admin.py \
+	scopeserver_gatekeeper/forms.py \
+	scopeserver_gatekeeper/models.py \
+	scopeserver_gatekeeper/views.py \
+	scopeserver_gatekeeper/templates/gatekeeper.html \
+	scopeserver_gatekeeper/templates/gatekeeper_manage.html \
+	scopeserver_vmfind/__init__.py \
+	scopeserver_vmfind/forms.py \
+	scopeserver_vmfind/views.py \
+	scopeserver_vmfind/templates/simple_form.html \
 	tools/cookiecutter \
 	tools/dataretriever \
 	tools/diamondd \
@@ -58,6 +73,10 @@ uninstall-local:
 	$(RM) -r $(DESTDIR)$(pythondir)/dataretriever
 	$(RM) $(DESTDIR)$(pythondir)/opendiamond*.egg-info
 	$(RM) -r $(DESTDIR)$(pythondir)/opendiamond
+	$(RM) $(DESTDIR)$(pythondir)/scopeserver*.egg-info
+	$(RM) -r $(DESTDIR)$(pythondir)/scopeserver_flickr
+	$(RM) -r $(DESTDIR)$(pythondir)/scopeserver_gatekeeper
+	$(RM) -r $(DESTDIR)$(pythondir)/scopeserver_vmfind
 	$(RM) $(DESTDIR)$(bindir)/cookiecutter
 	$(RM) $(DESTDIR)$(bindir)/dataretriever
 	$(RM) $(DESTDIR)$(bindir)/diamondd
