--- a/setup.py.in
+++ b/setup.py.in
@@ -29,9 +29,10 @@ setup(
 	'opendiamond.dataretriever',
 	'opendiamond.filter',
 	'opendiamond.server',
-	'scopeserver_flickr',
-	'scopeserver_gatekeeper',
-	'scopeserver_vmfind',
+	'opendiamond.scopeserver',
+	'opendiamond.scopeserver.flickr',
+	'opendiamond.scopeserver.gatekeeper',
+	'opendiamond.scopeserver.vmfind',
     ],
     scripts = [
 	'@srcdir@/tools/cookiecutter',
@@ -42,9 +43,9 @@ setup(
     ],
     package_dir = { '': '@srcdir@' },
     package_data = {
-	'scopeserver_flickr':	  [ 'templates/*.html' ],
-	'scopeserver_gatekeeper': [ 'templates/*.html' ],
-	'scopeserver_vmfind':	  [ 'templates/*.html' ],
+	'opendiamond.scopeserver.flickr':	  [ 'templates/*.html' ],
+	'opendiamond.scopeserver.gatekeeper':	  [ 'templates/*.html' ],
+	'opendiamond.scopeserver.vmfind':	  [ 'templates/*.html' ],
     },
     author = "OpenDiamond project, Carnegie Mellon University",
     author_email = "diamond@cs.cmu.edu",
