--- a/setup.py.in
+++ b/setup.py.in
@@ -32,6 +32,7 @@ setup(
 	'opendiamond.scopeserver',
 	'opendiamond.scopeserver.flickr',
 	'opendiamond.scopeserver.gatekeeper',
+	'opendiamond.scopeserver.gigapan',
 	'opendiamond.scopeserver.mirage',
     ],
     scripts = [
@@ -45,6 +46,7 @@ setup(
     package_data = {
 	'opendiamond.scopeserver.flickr':	  [ 'templates/*.html' ],
 	'opendiamond.scopeserver.gatekeeper':	  [ 'templates/*.html' ],
+	'opendiamond.scopeserver.gigapan':	  [ 'templates/*.html' ],
 	'opendiamond.scopeserver.mirage':	  [ 'templates/*.html' ],
     },
     author = "OpenDiamond project, Carnegie Mellon University",
