scopeserver: Move templates into scopeserver subdirectories

--- a/setup.py.in
+++ b/setup.py.in
@@ -44,10 +44,10 @@ setup(
     ],
     package_dir = { '': '@srcdir@' },
     package_data = {
-	'opendiamond.scopeserver.flickr':	  [ 'templates/*.html' ],
-	'opendiamond.scopeserver.gatekeeper':	  [ 'templates/*.html' ],
-	'opendiamond.scopeserver.gigapan':	  [ 'templates/*.html' ],
-	'opendiamond.scopeserver.mirage':	  [ 'templates/*.html' ],
+	'opendiamond.scopeserver.flickr':	  [ 'templates/scopeserver/*.html' ],
+	'opendiamond.scopeserver.gatekeeper':	  [ 'templates/scopeserver/*.html' ],
+	'opendiamond.scopeserver.gigapan':	  [ 'templates/scopeserver/*.html' ],
+	'opendiamond.scopeserver.mirage':	  [ 'templates/scopeserver/*.html' ],
     },
     author = "OpenDiamond project, Carnegie Mellon University",
     author_email = "diamond@cs.cmu.edu",
