--- a/setup.py.in
+++ b/setup.py.in
@@ -30,6 +30,7 @@ setup(
 	'opendiamond.filter',
 	'opendiamond.server',
 	'opendiamond.scopeserver',
+	'opendiamond.scopeserver.core',
 	'opendiamond.scopeserver.flickr',
 	'opendiamond.scopeserver.gatekeeper',
 	'opendiamond.scopeserver.gigapan',
@@ -44,6 +45,7 @@ setup(
     ],
     package_dir = { '': '@srcdir@' },
     package_data = {
+	'opendiamond.scopeserver.core':		  [ 'templates/scopeserver/*.html', 'static/scopeserver/*' ],
 	'opendiamond.scopeserver.flickr':	  [ 'templates/scopeserver/*.html' ],
 	'opendiamond.scopeserver.gatekeeper':	  [ 'templates/scopeserver/*.html' ],
 	'opendiamond.scopeserver.gigapan':	  [ 'templates/scopeserver/*.html' ],
