Change search bundle terminology
- Rename the component represented by a bundle from "search" to
"search predicate" or simply "predicate", and distinguish it from a codec.
Bundles now have .pred extensions if they are predicates or .codec
extensions if they are codecs.

- Change the manifest filename within a bundle

- Rename the top-level "search" manifest tag to "predicate"

--- a/Makefile.am
+++ b/Makefile.am
@@ -75,7 +75,7 @@ EXTRA_DIST = CREDITS LICENSE INSTALL \
 	tools/cookiecutter \
 	tools/dataretriever \
 	tools/diamondd \
-	tools/diamond-bundle-search \
+	tools/diamond-bundle-predicate \
 	tools/volcano
 
 # Once pylint 0.24 becomes widely available, this should be replaced with
@@ -109,7 +109,7 @@ uninstall-local:
 	$(RM) $(DESTDIR)$(bindir)/cookiecutter
 	$(RM) $(DESTDIR)$(bindir)/dataretriever
 	$(RM) $(DESTDIR)$(bindir)/diamondd
-	$(RM) $(DESTDIR)$(bindir)/diamond-bundle-search
+	$(RM) $(DESTDIR)$(bindir)/diamond-bundle-predicate
 
 clean-local:
 	$(RM) -r build
