Makefile.am: Convert pylint whitelist to blacklist
Requires pylint >= 0.24.

--- a/Makefile.am
+++ b/Makefile.am
@@ -89,21 +89,11 @@ EXTRA_DIST = CREDITS LICENSE INSTALL \
 	bundle/bundle.xslt \
 	tools/volcano
 
-# Once pylint 0.24 becomes widely available, this should be replaced with
-# "--ignore dataretriever --ignore scopeserver".
-PYLINT_MODULES = \
-	opendiamond.bundle \
-	opendiamond.config \
-	opendiamond.filter \
-	opendiamond.helpers \
-	opendiamond.scope \
-	opendiamond.server \
-	opendiamond.test
-
 check-local:
 	@# Fail on serious pylint errors
 	PYTHONPATH=$(srcdir) \
-		$(PYLINT) --rcfile=$(srcdir)/pylintrc $(PYLINT_MODULES) || \
+		$(PYLINT) --rcfile=$(srcdir)/pylintrc \
+		--ignore dataretriever,scopeserver opendiamond || \
 		[ $$(($$? & 3)) -eq 0 ]
 	PYTHONPATH=$(srcdir) PYTHONDONTWRITEBYTECODE=1 \
 		$(PYTHON) $(srcdir)/opendiamond/test.py
