--- a/Makefile.am
+++ b/Makefile.am
@@ -70,6 +70,7 @@ nobase_dist_python_DATA = \
 	opendiamond/blaster/schema-search.json \
 	opendiamond/blaster/static/testui/jquery.js \
 	opendiamond/blaster/static/testui/spinner.gif \
+	opendiamond/blaster/templates/testui/results.html \
 	opendiamond/blaster/templates/testui/search.html \
 	opendiamond/scopeserver/core/static/scopeserver/base.css \
 	opendiamond/scopeserver/core/static/scopeserver/jquery.js \
