blaster: Add initial Socket.IO streaming support

--- a/Makefile.am
+++ b/Makefile.am
@@ -69,6 +69,7 @@ noinst_PYTHON = \
 nobase_dist_python_DATA = \
 	opendiamond/blaster/schema-search.json \
 	opendiamond/blaster/static/testui/jquery.js \
+	opendiamond/blaster/static/testui/socket.io.js \
 	opendiamond/blaster/static/testui/spinner.gif \
 	opendiamond/blaster/templates/testui/results.html \
 	opendiamond/blaster/templates/testui/search.html \
