blaster: Add search result detail view to testui

--- a/Makefile.am
+++ b/Makefile.am
@@ -76,6 +76,7 @@ nobase_dist_python_DATA = \
 	opendiamond/blaster/static/testui/jquery.js \
 	opendiamond/blaster/static/testui/spinner.gif \
 	opendiamond/blaster/static/testui/unknown.png \
+	opendiamond/blaster/templates/testui/result.html \
 	opendiamond/blaster/templates/testui/results.html \
 	opendiamond/blaster/templates/testui/search.html \
 	opendiamond/scopeserver/core/static/scopeserver/base.css \
