--- a/newscope/Makefile.am
+++ b/newscope/Makefile.am
@@ -6,5 +6,6 @@ EXTRA_DIST = scope.desktop
 
 install-data-hook:
 	desktop-file-install --rebuild-mime-info-cache --vendor diamond $(srcdir)/scope.desktop \
-	|| desktop-file-install --dir $$HOME/.local/share/applications --rebuild-mime-info-cache --vendor diamond $(srcdir)/scope.desktop
+	|| desktop-file-install --dir $$HOME/.local/share/applications --rebuild-mime-info-cache --vendor diamond $(srcdir)/scope.desktop \
+	||:
 #	update-mime-database $(datarootdir)/mime
