--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@
 
 AC_INIT([OpenDiamond], [8.0.9], [diamond@cs.cmu.edu], [opendiamond], [http://diamond.cs.cmu.edu/])
 AC_CONFIG_AUX_DIR([build-aux])
-AM_INIT_AUTOMAKE([foreign 1.11.1])
+AM_INIT_AUTOMAKE([foreign 1.11.1 subdir-objects])
 AM_SILENT_RULES([yes])
 
 AC_PREREQ([2.59])
