Build opendiamond python module with setuptools

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,21 @@
 *~
+*.egg-info
 *.o
 *.lo
 *.la
 *.loT
 *.pc
 *.pyc
+*.so
+*.swp
 Makefile
 Makefile.in
+.cache
 .deps
-.libs
 .dirstamp
+.libs
+.tox
+/*.tar.gz
 /aclocal.m4
 /autom4te.cache
 /libtool
@@ -17,4 +23,6 @@ Makefile.in
 /config.*
 /configure
 /build
-/setup.py
+/dist
+/venv
+/doc/diamond-protocol.html
